# sudoku-solver

./: .gitignore  README.md
src/: main.cpp
src-generator/: CMakeLists.txt  getApi.cpp  getApi.h  main.cpp
src-qt/: CMakeLists.txt  SudokuModel.cpp  SudokuModel.h  window.cpp  window.h
src-standalone/: CMakeLists.txt  main.cpp
techniques/: isolver.h  sudoku_traits.cpp  sudoku_traits.h
techniques/backtracking/: backtracking.cpp  backtracking.h
techniques/simple/: a.out  simple.cpp  simple.h
techniques/simple/tests/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
